--- a/Servicios.html
+++ b/Servicios.html
@@ -34,6 +34,7 @@
     </nav>
   
     <p>
+      <h2>nuevo parrafo</h2>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus rerum, corrupti recusandae a dolor temporibus aperiam vel quos soluta officia voluptatem itaque facere reiciendis sapiente deleniti assumenda eveniet velit repellat. Aperiam voluptatem quaerat odit aliquam qui amet repellendus recusandae cum?
     </p>
     
