archivo sin h2 y sin  parrafo

--- a/Servicios.html
+++ b/Servicios.html
@@ -38,6 +38,8 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus rerum, corrupti recusandae a dolor temporibus aperiam vel quos soluta officia voluptatem itaque facere reiciendis sapiente deleniti assumenda eveniet velit repellat. Aperiam voluptatem quaerat odit aliquam qui amet repellendus recusandae cum?
     </p>
     
+    <img src="https://estaticos.muyinteresante.es/media/cache/1140x_thumb/uploads/images/gallery/59c4f5655bafe82c692a7052/gato-marron_0.jpg" alt="">
+    
     <div class="contenedor"></div>
   <!---lista-->
     <ul class= "lista">
