agregamos h2 en practica

--- a/Practica.html
+++ b/Practica.html
@@ -16,6 +16,7 @@
 
       <div class= "grid"> 
     
+        <h2>hola a todos</h2>
     <nav class="nav">
       <ul>
         <li>¿Quienes somos?</li>
